/*
 *                    GNU LESSER GENERAL PUBLIC LICENSE
 *                        Version 3, 29 June 2007
 *
 *  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
 *  Everyone is permitted to copy and distribute verbatim copies
 *  of this license document, but changing it is not allowed.
 *
 *
 *   This version of the GNU Lesser General Public License incorporates
 * the terms and conditions of version 3 of the GNU General Public
 * License, supplemented by the additional permissions listed below.
 *
 *   0. Additional Definitions.
 *
 *   As used herein, "this License" refers to version 3 of the GNU Lesser
 * General Public License, and the "GNU GPL" refers to version 3 of the GNU
 * General Public License.
 *
 *   "The Library" refers to a covered work governed by this License,
 * other than an Application or a Combined Work as defined below.
 *
 *   An "Application" is any work that makes use of an interface provided
 * by the Library, but which is not otherwise based on the Library.
 * Defining a subclass of a class defined by the Library is deemed a mode
 * of using an interface provided by the Library.
 *
 *   A "Combined Work" is a work produced by combining or linking an
 * Application with the Library.  The particular version of the Library
 * with which the Combined Work was made is also called the "Linked
 * Version".
 *
 *   The "Minimal Corresponding Source" for a Combined Work means the
 * Corresponding Source for the Combined Work, excluding any source code
 * for portions of the Combined Work that, considered in isolation, are
 * based on the Application, and not on the Linked Version.
 *
 *   The "Corresponding Application Code" for a Combined Work means the
 * object code and/or source code for the Application, including any data
 * and utility programs needed for reproducing the Combined Work from the
 * Application, but excluding the System Libraries of the Combined Work.
 *
 *   1. Exception to Section 3 of the GNU GPL.
 *
 *   You may convey a covered work under sections 3 and 4 of this License
 * without being bound by section 3 of the GNU GPL.
 *
 *   2. Conveying Modified Versions.
 *
 *   If you modify a copy of the Library, and, in your modifications, a
 * facility refers to a function or data to be supplied by an Application
 * that uses the facility (other than as an argument passed when the
 * facility is invoked), then you may convey a copy of the modified
 * version:
 *
 *    a) under this License, provided that you make a good faith effort to
 *    ensure that, in the event an Application does not supply the
 *    function or data, the facility still operates, and performs
 *    whatever part of its purpose remains meaningful, or
 *
 *    b) under the GNU GPL, with none of the additional permissions of
 *    this License applicable to that copy.
 *
 *   3. Object Code Incorporating Material from Library Header Files.
 *
 *   The object code form of an Application may incorporate material from
 * a header file that is part of the Library.  You may convey such object
 * code under terms of your choice, provided that, if the incorporated
 * material is not limited to numerical parameters, data structure
 * layouts and accessors, or small macros, inline functions and templates
 * (ten or fewer lines in length), you do both of the following:
 *
 *    a) Give prominent notice with each copy of the object code that the
 *    Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the object code with a copy of the GNU GPL and this license
 *    document.
 *
 *   4. Combined Works.
 *
 *   You may convey a Combined Work under terms of your choice that,
 * taken together, effectively do not restrict modification of the
 * portions of the Library contained in the Combined Work and reverse
 * engineering for debugging such modifications, if you also do each of
 * the following:
 *
 *    a) Give prominent notice with each copy of the Combined Work that
 *    the Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the Combined Work with a copy of the GNU GPL and this license
 *    document.
 *
 *    c) For a Combined Work that displays copyright notices during
 *    execution, include the copyright notice for the Library among
 *    these notices, as well as a reference directing the user to the
 *    copies of the GNU GPL and this license document.
 *
 *    d) Do one of the following:
 *
 *        0) Convey the Minimal Corresponding Source under the terms of this
 *        License, and the Corresponding Application Code in a form
 *        suitable for, and under terms that permit, the user to
 *        recombine or relink the Application with a modified version of
 *        the Linked Version to produce a modified Combined Work, in the
 *        manner specified by section 6 of the GNU GPL for conveying
 *        Corresponding Source.
 *
 *        1) Use a suitable shared library mechanism for linking with the
 *        Library.  A suitable mechanism is one that (a) uses at run time
 *        a copy of the Library already present on the user's computer
 *        system, and (b) will operate properly with a modified version
 *        of the Library that is interface-compatible with the Linked
 *        Version.
 *
 *    e) Provide Installation Information, but only if you would otherwise
 *    be required to provide such information under section 6 of the
 *    GNU GPL, and only to the extent that such information is
 *    necessary to install and execute a modified version of the
 *    Combined Work produced by recombining or relinking the
 *    Application with a modified version of the Linked Version. (If
 *    you use option 4d0, the Installation Information must accompany
 *    the Minimal Corresponding Source and Corresponding Application
 *    Code. If you use option 4d1, you must provide the Installation
 *    Information in the manner specified by section 6 of the GNU GPL
 *    for conveying Corresponding Source.)
 *
 *   5. Combined Libraries.
 *
 *   You may place library facilities that are a work based on the
 * Library side by side in a single library together with other library
 * facilities that are not Applications and are not covered by this
 * License, and convey such a combined library under terms of your
 * choice, if you do both of the following:
 *
 *    a) Accompany the combined library with a copy of the same work based
 *    on the Library, uncombined with any other library facilities,
 *    conveyed under the terms of this License.
 *
 *    b) Give prominent notice with the combined library that part of it
 *    is a work based on the Library, and explaining where to find the
 *    accompanying uncombined form of the same work.
 *
 *   6. Revised Versions of the GNU Lesser General Public License.
 *
 *   The Free Software Foundation may publish revised and/or new versions
 * of the GNU Lesser General Public License from time to time. Such new
 * versions will be similar in spirit to the present version, but may
 * differ in detail to address new problems or concerns.
 *
 *   Each version is given a distinguishing version number. If the
 * Library as you received it specifies that a certain numbered version
 * of the GNU Lesser General Public License "or any later version"
 * applies to it, you have the option of following the terms and
 * conditions either of that published version or of any later version
 * published by the Free Software Foundation. If the Library as you
 * received it does not specify a version number of the GNU Lesser
 * General Public License, you may choose any version of the GNU Lesser
 * General Public License ever published by the Free Software Foundation.
 *
 *   If the Library as you received it specifies that a proxy can decide
 * whether future versions of the GNU Lesser General Public License shall
 * apply, that proxy's public statement of acceptance of any version is
 * permanent authorization for you to choose that version for the
 * Library.
 */
package com.github.szgabsz91.morpher.engines.impl.converters;

import com.github.szgabsz91.morpher.core.model.AffixType;
import com.github.szgabsz91.morpher.core.io.IConverter;
import com.github.szgabsz91.morpher.core.services.ServiceProvider;
import com.github.szgabsz91.morpher.engines.impl.impl.MorpherEngine;
import com.github.szgabsz91.morpher.engines.impl.impl.probability.IProbabilityCalculator;
import com.github.szgabsz91.morpher.engines.impl.impl.probability.MinMaxProbabilityCalclator;
import com.github.szgabsz91.morpher.engines.impl.impl.probability.MultiplyProbabilityCalculator;
import com.github.szgabsz91.morpher.engines.impl.protocolbuffers.MorpherEngineMessage;
import com.github.szgabsz91.morpher.engines.impl.protocolbuffers.ProbabilityCalculatorTypeMessage;
import com.github.szgabsz91.morpher.engines.impl.transformationengineholderfactories.ITransformationEngineHolderFactory;
import com.github.szgabsz91.morpher.engines.impl.transformationengineholders.ITransformationEngineHolder;
import com.github.szgabsz91.morpher.languagehandlers.api.ILanguageHandler;
import com.github.szgabsz91.morpher.transformationengines.api.IBidirectionalTransformationEngine;
import com.github.szgabsz91.morpher.transformationengines.api.factories.IAbstractTransformationEngineFactory;
import com.google.protobuf.Any;
import com.google.protobuf.CodedInputStream;
import com.google.protobuf.DoubleValue;
import com.google.protobuf.InvalidProtocolBufferException;

import java.io.IOException;
import java.lang.reflect.InvocationTargetException;
import java.nio.file.Files;
import java.nio.file.Path;
import java.util.HashMap;
import java.util.Map;
import java.util.function.Supplier;
import java.util.zip.GZIPInputStream;

import static java.util.stream.Collectors.toMap;

/**
 * Protocol Buffer converter for the {@link MorpherEngine} class.
 *
 * @author szgabsz91
 */
public class MorpherEngineConverter implements IConverter<MorpherEngine, MorpherEngineMessage> {

    private final ServiceProvider serviceProvider;
    private final boolean lazy;

    /**
     * Constructor that sets the {@link ServiceProvider} instance and the lazy flag.
     * @param serviceProvider the {@link ServiceProvider} instance
     * @param lazy flag that indicates if the transformation engines should not be serialized/deserialized (true) or
     *             should be (false)
     */
    public MorpherEngineConverter(final ServiceProvider serviceProvider, final boolean lazy) {
        this.serviceProvider = serviceProvider;
        this.lazy = lazy;
    }

    /**
     * Constructor that sets the {@link ServiceProvider} instance and the lazy flag to false.
     * @param serviceProvider the {@link ServiceProvider} instance
     */
    public MorpherEngineConverter(final ServiceProvider serviceProvider) {
        this(serviceProvider, false);
    }

    /**
     * Converts a {@link MorpherEngine} to a {@link MorpherEngineMessage}.
     *
     * {@inheritDoc}
     */
    @Override
    public MorpherEngineMessage convert(final MorpherEngine morpherEngine) {
        final String transformationEngineHolderFactoryQualifier =
                morpherEngine.getTransformationEngineHolderFactory().getClass().getName();

        final String abstractTransformationEngineFactoryQualifier =
                toString(morpherEngine.getAbstractTransformationEngineFactory());
        final Any abstractTransformationEngineFactoryMessage =
                Any.pack(morpherEngine.getAbstractTransformationEngineFactory().toMessage());

        final String languageHandlerQualifier = toString(morpherEngine.getLanguageHandler());
        final Any languageHandlerMessage = Any.pack(morpherEngine.getLanguageHandler().toMessage());

        final ProbabilityCalculatorTypeMessage probabilityCalculatorType =
                getProbabilityCalculatorType(morpherEngine.getProbabilityCalculator());

        MorpherEngineMessage.Builder morpherEngineMessageBuilder = MorpherEngineMessage.newBuilder()
                .setTransformationEngineHolderFactoryQualifier(transformationEngineHolderFactoryQualifier)
                .setAbstractTransformationEngineFactoryQualifier(abstractTransformationEngineFactoryQualifier)
                .setAbstractTransformationEngineFactory(abstractTransformationEngineFactoryMessage)
                .setLanguageHandlerQualifier(languageHandlerQualifier)
                .setLanguageHandler(languageHandlerMessage)
                .setProbabilityCalculatorType(probabilityCalculatorType);

        final Double minimumAggregatedWeightThreshold = morpherEngine.getMinimumAggregatedWeightThreshold();
        if (minimumAggregatedWeightThreshold != null) {
            morpherEngineMessageBuilder = morpherEngineMessageBuilder
                    .setMinimumAggregatedWeightThreshold(DoubleValue.of(minimumAggregatedWeightThreshold));
        }

        if (!this.lazy) {
            final Map<String, Any> transformationEngineMap = morpherEngine.getTransformationEngineHolderMap().entrySet()
                    .stream()
                    .map(entry -> {
                        final AffixType affixType = entry.getKey();
                        final ITransformationEngineHolder transformationEngineHolder = entry.getValue();
                        final IBidirectionalTransformationEngine<?> transformationEngine =
                                transformationEngineHolder.get();
                        transformationEngineHolder.clear();
                        final Any transformationEngineMessage = Any.pack(transformationEngine.toMessage());
                        return Map.entry(affixType.toString(), transformationEngineMessage);
                    })
                    .collect(toMap(Map.Entry::getKey, Map.Entry::getValue));
            morpherEngineMessageBuilder.putAllTransformationEngineMap(transformationEngineMap);
        }

        return morpherEngineMessageBuilder.build();
    }

    /**
     * Converts a {@link MorpherEngineMessage} to a {@link MorpherEngine}.
     *
     * {@inheritDoc}
     */
    @Override
    public MorpherEngine convertBack(final MorpherEngineMessage morpherEngineMessage) {
        final ITransformationEngineHolderFactory transformationEngineHolderFactory = instantiate(
                morpherEngineMessage.getTransformationEngineHolderFactoryQualifier()
        );

        @SuppressWarnings("unchecked")
        final IAbstractTransformationEngineFactory<?, ?> abstractTransformationEngineFactory = toInstance(
                IAbstractTransformationEngineFactory.class,
                morpherEngineMessage.getAbstractTransformationEngineFactoryQualifier()
        );
        try {
            abstractTransformationEngineFactory.fromMessage(
                    morpherEngineMessage.getAbstractTransformationEngineFactory()
            );
        }
        catch (final InvalidProtocolBufferException e) {
            throw new IllegalStateException("Cannot load abstract transformation engine factory", e);
        }

        final ILanguageHandler<?> languageHandler = toInstance(
                ILanguageHandler.class,
                morpherEngineMessage.getLanguageHandlerQualifier()
        );
        try {
            languageHandler.fromMessage(morpherEngineMessage.getLanguageHandler());
        }
        catch (final InvalidProtocolBufferException e) {
            throw new IllegalStateException("Cannot load language handler", e);
        }

        final IProbabilityCalculator probabilityCalculator =
                createProbabilityCalculator(morpherEngineMessage.getProbabilityCalculatorType());

        final Double minimumAggregatedWeightThreshold = morpherEngineMessage.hasMinimumAggregatedWeightThreshold() ?
                morpherEngineMessage.getMinimumAggregatedWeightThreshold().getValue() :
                null;

        final Map<AffixType, ITransformationEngineHolder> transformationEngineHolderMap;
        if (!this.lazy) {
            transformationEngineHolderMap = morpherEngineMessage.getTransformationEngineMapMap().entrySet()
                    .stream()
                    .map(entry -> {
                        final AffixType affixType = AffixType.of(entry.getKey());
                        final Any transformationEngineMessage = entry.getValue();
                        @SuppressWarnings("checkstyle:LineLength")
                        final Supplier<IBidirectionalTransformationEngine<?>> bidirectionalTransformationEngineFactory =
                                abstractTransformationEngineFactory.getBidirectionalFactory(affixType);
                        final IBidirectionalTransformationEngine<?> bidirectionalTransformationEngine =
                                bidirectionalTransformationEngineFactory.get();
                        try {
                            bidirectionalTransformationEngine.fromMessage(transformationEngineMessage);
                        }
                        catch (final InvalidProtocolBufferException e) {
                            throw new IllegalStateException("Cannot load transformation engine for " + affixType, e);
                        }
                        @SuppressWarnings("checkstyle:LineLength")
                        final ITransformationEngineHolder transformationEngineHolder = transformationEngineHolderFactory.create(
                                affixType,
                                abstractTransformationEngineFactory,
                                bidirectionalTransformationEngine
                        );
                        return Map.entry(affixType, transformationEngineHolder);
                    })
                    .collect(toMap(Map.Entry::getKey, Map.Entry::getValue));
        }
        else {
            transformationEngineHolderMap = new HashMap<>();
        }

        return new MorpherEngine(
                this.serviceProvider,
                transformationEngineHolderMap,
                transformationEngineHolderFactory,
                abstractTransformationEngineFactory,
                languageHandler,
                probabilityCalculator,
                minimumAggregatedWeightThreshold
        );
    }

    /**
     * Parses the given file and loads the {@link MorpherEngineMessage} from it.
     *
     * {@inheritDoc}
     */
    @Override
    public MorpherEngineMessage parse(final Path file) throws IOException {
        try (GZIPInputStream gzipInputStream = new GZIPInputStream(Files.newInputStream(file))) {
            final CodedInputStream codedInputStream = CodedInputStream.newInstance(gzipInputStream);
            codedInputStream.setSizeLimit(Integer.MAX_VALUE);
            return MorpherEngineMessage.parseFrom(codedInputStream);
        }
    }

    private static <T> String toString(final T instance) {
        return ServiceProvider.getQualifier(instance).orElse(null);
    }

    private <S> S toInstance(final Class<S> clazz, final String string) {
        return this.serviceProvider.get(clazz, string);
    }

    private <S> S instantiate(final String className) {
        try {
            @SuppressWarnings("unchecked")
            final S result = (S) Class.forName(className).getDeclaredConstructor().newInstance();
            return result;
        }
        catch (final InstantiationException | ClassNotFoundException | NoSuchMethodException |
                InvocationTargetException | IllegalAccessException e) {
            throw new IllegalStateException("Cannot instantiate class " + className, e);
        }
    }

    private static ProbabilityCalculatorTypeMessage getProbabilityCalculatorType(
            final IProbabilityCalculator probabilityCalculator) {
        if (probabilityCalculator instanceof MinMaxProbabilityCalclator) {
            return ProbabilityCalculatorTypeMessage.MIN_MAX;
        }

        if (probabilityCalculator instanceof MultiplyProbabilityCalculator) {
            return ProbabilityCalculatorTypeMessage.MULTIPLY;
        }

        throw new IllegalArgumentException("Unknown probability calculator type: " + probabilityCalculator);
    }

    private static IProbabilityCalculator createProbabilityCalculator(
            final ProbabilityCalculatorTypeMessage probabilityCalculatorTypeMessage) {
        if (probabilityCalculatorTypeMessage == ProbabilityCalculatorTypeMessage.MIN_MAX) {
            return new MinMaxProbabilityCalclator();
        }

        if (probabilityCalculatorTypeMessage == ProbabilityCalculatorTypeMessage.MULTIPLY) {
            return new MultiplyProbabilityCalculator();
        }

        throw new IllegalArgumentException("Unknown probability calculator type: " + probabilityCalculatorTypeMessage);
    }

}
